--- a/src/Weather.css
+++ b/src/Weather.css
@@ -11,12 +11,14 @@
 }
 
 .Weather h1 {
-  color: #29214b66;
+  color: #27214266;
   font-size: 38px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 29px;
   line-height: 48px;
+  margin: 0 auto;
 }
+
 .Weather ul {
   margin: 0;
   padding: 0;
@@ -33,14 +35,11 @@
   font-size: 80px;
   font-weight: 500;
   line-height: 1;
-  margin-left: 10px;
 }
 .unit {
   color: #212121;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 400;
-  line-height: 36px;
-  line-height: 1;
   position: relative;
-  top: -34px;
+  top: -20px;
 }
